Correct titles that were not breaking and overflowing.

--- a/docs/doxystrap/doxystrap-extra.css
+++ b/docs/doxystrap/doxystrap-extra.css
@@ -368,6 +368,10 @@ span.SRScope {
   font-size: 50%;
 }
 
+div.title {
+    word-break: break-all
+}
+
 /* Add this to ensure the reference title do not wrap around the citation index in bibliography */
 dl.citelist dd {
   display:block;
